# raindrip

./: .gitignore  README.md  environ.sh  publisher.py  pyproject.toml  requirements.txt
metrics/: __init__.py  base.py  hardware_metrics.py  network_metrics.py  system_metrics.py
raindrip/: app.py  cli.py  config.py  consumer.py  exceptions.py  publisher.py
raindrip/metrics/: __init__.py  base.py  hardware.py  network.py  system.py
raindrop/: app.py  cli.py  config.py  consumer.py  kafka_utils.py  message_handlers.py  publisher.py
raindrop/metrics/: __init__.py  hardware.py  network.py  system.py
tests/: test_app.py  test_cli.py  test_config.py  test_consumer.py
tests/metrics/: test_hardware.py  test_network.py  test_system.py
