[tool.poetry]
name = "raindrop"
version = "0.1.0"
description = "Collect various metrics and stream it"
authors = ["Keshab Paudel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
