[tool.poetry]
name = "raindrip"
version = "0.0.3"
description = "Collect various operating system metrics and stream it"
authors = ["Keshab Paudel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6"
kafka-python = "^1.4"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
raindrip = "raindrip.cli:main"
